# north_admin_testapp

./: .env.docker  Makefile  pyproject.toml
app/: gen_user.py  main.py
app/admin/: main.py
app/admin/routes/: user.py
app/api/: deps.py  router.py
app/api/endpoints/: auth.py
app/core/: auth.py  config.py  db.py
app/cruds/: base.py  post.py  user.py
app/models/: enums.py  post.py  user.py
app/schemas/: user.py
migrations/: env.py
migrations/versions/: d92d56877cf4_base_tables.py
